--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </button>
                     <div class="progress" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
-                <a href="#" class="head__btn-next">
+                <a href="#services" class="head__btn-next">
                     <svg width="64" height="34" viewBox="0 0 64 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M0.0156173 1.70857C0.014183 0.940388 0.635925 0.316558 1.40411 0.315124C1.77444 0.314472 2.12978 0.461563 2.39136 0.723796L32.007 30.3422L61.6225 0.723798C62.1664 0.179903 63.0482 0.179903 63.5921 0.723799C64.136 1.26769 64.136 2.14945 63.5921 2.69335L32.9917 33.2938C32.4485 33.8368 31.5681 33.8368 31.0248 33.2938L0.424549 2.69335C0.162838 2.43255 0.0156173 2.07812 0.0156173 1.70857Z"
@@ -250,7 +250,7 @@
             </nav>
             <ul class="footer__socials">
                 <li class="footer__social">
-                    <a href="#" class="footer__social-link">
+                    <a href="https://www.instagram.com/7190__by/" class="footer__social-link">
                         <img src="image/inst.svg" alt="social" class="footer__social-icon">
                     </a>
                 </li>
