fix__head__text

--- a/index.html
+++ b/index.html
@@ -55,30 +55,38 @@
                 <div class="head-sliders">
                     <ul class="head__slider">
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Входная дверь Бетолла Hi-pip</h1>
+                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>Инсайт, как справедливо считает Ф.Энгельс, иллюстрирует филогенез, таким образом.</p>
+                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                    Поможем с подбором и монтажем.
+                                    Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
                         </li>
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Входная дверь Бетолла Hi-pip</h1>
+                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>Инсайт, как справедливо считает Ф.Энгельс, иллюстрирует филогенез, таким образом.</p>
+                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                    Поможем с подбором и монтажем.
+                                    Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
                         </li>
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Входная дверь Бетолла Hi-pip</h1>
+                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>Инсайт, как справедливо считает Ф.Энгельс, иллюстрирует филогенез, таким образом.</p>
+                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                    Поможем с подбором и монтажем.
+                                    Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
                         </li>
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Входная дверь Бетолла Hi-pip</h1>
+                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>Инсайт, как справедливо считает Ф.Энгельс, иллюстрирует филогенез, таким образом.</p>
+                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                    Поможем с подбором и монтажем.
+                                    Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
                         </li>
