--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
                                     Поможем с подбором и монтажем.
                                     Звоните по номеру 7190.</p>
                             </div>
@@ -66,7 +66,7 @@
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
                                     Поможем с подбором и монтажем.
                                     Звоните по номеру 7190.</p>
                             </div>
@@ -75,7 +75,7 @@
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
                                     Поможем с подбором и монтажем.
                                     Звоните по номеру 7190.</p>
                             </div>
@@ -84,7 +84,7 @@
                         <li class="head__slide" style="background-image: url('image/head__bg.png');">
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки.
+                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
                                     Поможем с подбором и монтажем.
                                     Звоните по номеру 7190.</p>
                             </div>
