--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
                                 <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем.
+                                    Поможем с подбором и монтажем. <br>
                                     Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
@@ -67,7 +67,7 @@
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
                                 <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем.
+                                    Поможем с подбором и монтажем. <br>
                                     Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
@@ -76,7 +76,7 @@
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
                                 <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем.
+                                    Поможем с подбором и монтажем. <br>
                                     Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
@@ -85,7 +85,7 @@
                             <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
                             <div class="head__text">
                                 <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем.
+                                    Поможем с подбором и монтажем. <br>
                                     Звоните по номеру 7190.</p>
                             </div>
                             <a href="#" class="head__btn">заказать звонок</a>
