--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                         </div>
                     </li>
                 </ul>
-                <div class="help" style="background-image: url(image/help__bg.png);">
+            </div>
+            <div class="help" style="background-image: url(image/help__bg.png);">
+                <div class="container">
                     <h2 class="help__title">Возникли вопросы?</h2>
                     <span class="help__subtitle">Оставляйте заявку и наш специалист свяжится
                         <br>с вами в ближайшее время</span>
