--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
                         <li class="at-menu__item">
                             <a href="#" class="at-menu__link">Контакты</a>
                         </li>
+                        <li class="at-menu__item  at-menu__item-phone">
+                            <a href="tel:" class="header__phone">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="12" cy="12" r="12" />
+                                    <path
+                                        d="M16.005 13.69C15.39 13.69 14.795 13.59 14.24 13.41C14.065 13.35 13.87 13.395 13.735 13.53L12.95 14.515C11.535 13.84 10.21 12.565 9.505 11.1L10.48 10.27C10.615 10.13 10.655 9.935 10.6 9.76C10.415 9.205 10.32 8.61 10.32 7.995C10.32 7.725 10.095 7.5 9.825 7.5H8.095C7.825 7.5 7.5 7.62 7.5 7.995C7.5 12.64 11.365 16.5 16.005 16.5C16.36 16.5 16.5 16.185 16.5 15.91V14.185C16.5 13.915 16.275 13.69 16.005 13.69Z"
+                                        fill="#FFFDFA" />
+                                </svg>
+                                <span>7190</span>
+                            </a>
+                        </li>
                     </ul>
                 </nav>
-                <a href="tel:" class="header__phone">
+                <a href="tel:" class="header__phone header__phone-ad">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="12" cy="12" r="12" />
                         <path
@@ -277,8 +289,11 @@
             </ul>
         </div>
     </footer>
+    <script src="js/dynamicAdapt_dev.js"></script>
+    <!--Thank you freelancer for life -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/burger-menu.js"></script>
     <script src="js/script.js"></script>
 </body>
 
