--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                             <a href="#services" class="at-menu__link">Услуги</a>
                         </li>
                         <li class="at-menu__item">
-                            <a href="#catalog" class="at-menu__link">Католог</a>
+                            <a href="#catalog" class="at-menu__link">Каталог</a>
                         </li>
                         <li class="at-menu__item">
-                            <a href="#" class="at-menu__link">Контакты</a>
+                            <a href="tel:7190" class="at-menu__link">Контакты</a>
                         </li>
                         <li class="at-menu__item  at-menu__item-phone">
                             <a href="tel:" class="header__phone">
@@ -73,34 +73,40 @@
                                     Поможем с подбором и монтажем. <br>
                                     Звоните по номеру 7190.</p>
                             </div>
-                            <a href="#" class="head__btn">заказать звонок</a>
+                            <a href="tel:7190" class="head__btn">заказать звонок</a>
                         </li>
-                        <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
+                        <li class="head__slide" style="background-image: url('image/head__bg2.png');">
+                            <h1 class="head__title">Скидки на <br>
+                                серию «Гарда»</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем. <br>
-                                    Звоните по номеру 7190.</p>
+                                <p>Успейте приобрести двери серии «Гарда». Скидка <br> продлится до 31 августа</p>
                             </div>
-                            <a href="#" class="head__btn">заказать звонок</a>
+                            <a href="tel:7190" class="head__btn">заказать звонок</a>
                         </li>
-                        <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
+                        <li class="head__slide" style="background-image: url('image/head__bg3.png');">
+                            <h1 class="head__title">Новые модели Staller</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем. <br>
-                                    Звоните по номеру 7190.</p>
+                                <p>В наличии появились новые модели Staller <br>
+                                    с панелями Profildoors
                             </div>
-                            <a href="#" class="head__btn">заказать звонок</a>
+                            <a href="tel:7190" class="head__btn">заказать звонок</a>
                         </li>
-                        <li class="head__slide" style="background-image: url('image/head__bg.png');">
-                            <h1 class="head__title">Дом без окон и дверей,прямо как в детской загадке?</h1>
+                        <li class="head__slide" style="background-image: url('image/head__bg4.png');">
+                            <h1 class="head__title">Гарда муар<br>
+                                Царга Лазер<br>
+                                уже в наличии</h1>
                             <div class="head__text">
-                                <p>У нас в ассортименте:окна, двери, полы, потолки. <br>
-                                    Поможем с подбором и монтажем. <br>
-                                    Звоните по номеру 7190.</p>
+                                <p>Листвинница Мокко со вставками Лакобель <br>
+                                    в цвете черный лак</p>
                             </div>
-                            <a href="#" class="head__btn">заказать звонок</a>
+                            <a href="tel:7190" class="head__btn">заказать звонок</a>
+                        </li>
+                        <li class="head__slide" style="background-image: url('image/head__bg5.png');">
+                            <h1 class="head__title">Тони Stark <br> рекомендует!</h1>
+                            <div class="head__text">
+                                <p>Новинки Stark ST1 и ST3 c черными стеклами</p>
+                            </div>
+                            <a href="tel:7190" class="head__btn">заказать звонок</a>
                         </li>
                     </ul>
                     <button type="button" class="slickPrev arrows">
@@ -180,13 +186,13 @@
                     <h2 class="help__title">Возникли вопросы?</h2>
                     <span class="help__subtitle">Оставляйте заявку и наш специалист свяжится
                         <br>с вами в ближайшее время</span>
-                    <a href="#" class="help__btn">заказать звонок</a>
+                    <a href="tel:7190" class="help__btn">заказать звонок</a>
                 </div>
             </div>
         </section>
         <section class="catalog" id="catalog">
             <div class="container">
-                <h2 class="catalog__title">Католог</h2>
+                <h2 class="catalog__title">Каталог</h2>
                 <div class="catalog__doors">
                     <div class="catalog__door">
                         <img src="image/17.png" alt="door" class="catalog__img">
@@ -260,13 +266,13 @@
             <nav class="footer__nav">
                 <ul class="footer__items">
                     <li class="footer__item">
-                        <a href="#" class="footer__link">услуги</a>
+                        <a href="#services" class="footer__link">услуги</a>
                     </li>
                     <li class="footer__item">
-                        <a href="#" class="footer__link">Каталог</a>
+                        <a href="#catalog" class="footer__link">Каталог</a>
                     </li>
                     <li class="footer__item">
-                        <a href="#" class="footer__link">Каталог</a>
+                        <a href="tel:7190" class="footer__link">Контакты</a>
                     </li>
                 </ul>
             </nav>
@@ -289,12 +295,11 @@
             </ul>
         </div>
     </footer>
-    <script src="js/dynamicAdapt_dev.js"></script>
-    <!--Thank you freelancer for life -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/burger-menu.js"></script>
     <script src="js/script.js"></script>
+    <!-- Creating Powered by overkill(Daniil) and studio profit.gallery -->
 </body>
 
 </html>
